--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <div class="user-details-container">
                         <div class="user-details d-flex d-align">
                             <text>
-                                <small>MICHAEL CHIBUZ . .</small>
+                                <small>MICHAEL CHIBUZ.</small>
                             </text>
                         </div>
                         <div class="user-details d-flex d-align">
@@ -40,7 +40,7 @@
                     </div>
                     <div class="user-bank left">
                         <div class="bold d-flex d-center">
-                            <div style="transform: translateY(5px);">M</div>
+                            <div style="transform: translateY(8px);">M</div>
                         </div>
                     </div>
                     <div class="user-more right d-flex d-center">
@@ -59,7 +59,7 @@
                         502,157.03</text>
                     </div>
                     <div class="right black-col scl-09">
-                        <text class="black-col font-reg">History </text>
+                        <text><small class="black-col font-reg">History</small> </text>
                     </div>
                 </div>
             </div>
@@ -87,7 +87,11 @@
                             </main>
                         </div>
                     </div>
-                    <div class="span-nav"></div>
+                    <div class="span-nav d-flex d-center">
+                        <div class="send-container">
+                            <div class="send"></div>
+                        </div>
+                    </div>
                     <div class="span-nav d-flex d-center">
                         <div class="span">
                             <main class="d-flex d-center">
