--- a/index.html
+++ b/index.html
@@ -88,8 +88,10 @@
                         </div>
                     </div>
                     <div class="span-nav d-flex d-center">
-                        <div class="send-container">
-                            <div class="send"></div>
+                        <div class="send-container d-flex d-center">
+                            <div class="send d-flex d-center">
+                                <img src="src/icons/arrow-up.svg" alt="fa-fa-arrow-up">
+                            </div>
                         </div>
                     </div>
                     <div class="span-nav d-flex d-center">
